ingress/closet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: closet-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - api.randomaccess.world
    secretName: aks-ingress-tls
  rules:
  - host: api.randomaccess.world
    http:
      paths:
      - backend:
          serviceName: gocloset 
          servicePort: 80
        path: /(.*)
